# QDevelop

./: README.md
cmake/: InstallLocation.cmake  QDevelopCPack.cmake  QDevelopCPackOptions.cmake.in  Setup.cmake  Version.cmake
src/: CMakeLists.txt  Debugger.cpp  Debugger.h  Global.h  Highlighter.cpp  Highlighter.h  MainWindow.cpp  MainWindow.h  Project.cpp  Project.h  ProjectBuilder.cpp  ProjectBuilder.h  Session.cpp  Session.h  Source.cpp  Source.h  main.cpp  resources.qrc
src/icons/: Thumbs.db  app.aps  app.desktop  app.icns  app_logo.pptx
src/osinstall/: Info.plist  start_qdevelop.sh
src/syntax/: cpp_classes.txt  cpp_keywords.txt  preproc_keywords.txt
